# cpq

./: .gitignore  README.md
backend/: .env.example  LICENSE.md  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  quotes.py  servers.py
backend/app/core/: app.py  logger.py  settings.py
backend/app/core/exceptions/: __init__.py  exception.py  handler.py
backend/app/data/: __init__.py  enums.py  provider.py  utilities.py
backend/app/data/models/: __init__.py  data_store.py  quote.py  responses.py  server.py
backend/app/data/store/: categories.jsonl  options.jsonl  quotes.jsonl  rules.jsonl  settings.jsonl
backend/app/middleware/: __init__.py  requests.py
backend/app/rules/: __init__.py  condition_evaluator.py  engine.py
backend/app/rules/handlers/: __init__.py  availability.py  base.py  discount.py  registry.py  validation.py
backend/app/services/: __init__.py  quote.py  server.py
client/: .prettierrc  README.md  package.json  pnpm-lock.yaml
client/src/: App.tsx  main.tsx
client/src/app/: store.ts
client/src/features/quotes/api/: index.ts  quotesApi.ts
client/src/features/quotes/components/: ContactForm.tsx  QuoteModal.tsx  index.ts
client/src/features/quotes/types/: index.ts
client/src/services/api/: baseQuery.ts  errorMap.ts  index.ts
client/src/services/types/: baseResponse.ts  errorResponse.ts  index.ts
client/src/shared/components/: ErrorBoundary.tsx
client/src/shared/utilities/: apiUtility.ts
client/src/styles/: globals.css  theme.ts
(+11 files in other folders)
