[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
packages = [
    { include = "app", from = "." }
]
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.116.1",
    "granian>=2.5.0",
    "pip>=25.2",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.6",
    "structlog>=25.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "mypy>=1.17.1",
]
docs = [
    "email-validator>=2.0.0"
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
